@@ -27,23 +27,25 @@
 $id = Auth::GetCurrentUser();
 
 if ($LMS->UserExists($id)) {
-    if (isset($_POST['passwd'])) {
-        $passwd = $_POST['passwd'];
+    if (isset($_POST['password'])) {
+        $passwd = $_POST['password'];
 
-        if ($passwd['passwd'] == '' || $passwd['confirm'] == '') {
-            $error['password'] = trans('Empty passwords are not allowed!');
+        if (!$LMS->checkPassword($passwd['currentpasswd'])) {
+            $error['currentpasswd'] = trans('Wrong current password!');
+        } elseif ($passwd['passwd'] == '' || $passwd['confirm'] == '') {
+            $error['passwd'] = trans('Empty passwords are not allowed!');
         } elseif ($passwd['passwd'] != $passwd['confirm']) {
-            $error['password'] = trans('Passwords does not match!');
+            $error['passwd'] = trans('Passwords does not match!');
         } elseif (!check_password_strength($passwd['passwd'])) {
-            $error['password'] = trans('The password should contain at least one capital letter, one lower case letter, one digit and should consist of at least 8 characters!');
+            $error['passwd'] = trans('The password should contain at least one capital letter, one lower case letter, one digit and should consist of at least 8 characters!');
         } elseif ($LMS->PasswdExistsInHistory($id, $passwd['passwd'])) {
-            $error['password'] = trans('You already used this password!');
+            $error['passwd'] = trans('You already used this password!');
         }
-        
+
         if (!$error) {
             $oldpasswd = $LMS->DB->GetOne('SELECT passwd FROM users WHERE id = ?', array($id));
             list (, $alg, $salt) = explode('$', $oldpasswd);
-            $newpasswd = crypt($passwd['passwd'], '$' . $alg . '$' . $salt . '$');
+            $newpasswd = crypt($passwd['password'], '$' . $alg . '$' . $salt . '$');
             if ($newpasswd == $oldpasswd) {
                 $error['password'] = $error['confirm'] = trans('New password is the same as old password!');
             }
@@ -61,6 +63,7 @@ if ($LMS->UserExists($id)) {
     $SMARTY->assign('passwd', $passwd);
     $SMARTY->assign('error', $error);
     $SMARTY->assign('target', '?m=chpasswd');
+    $SMARTY->assign('current_password_required', true);
     $SMARTY->display('user/userpasswd.html');
 } else {
     $SESSION->redirect('?m=' . $SESSION->get('lastmodule'));
