@@ -27,23 +27,19 @@
 $id = (isset($_GET['id'])) ? $_GET['id'] : Auth::GetCurrentUser();
 
 if ($LMS->UserExists($id)) {
-    if (isset($_POST['passwd'])) {
-        $passwd = $_POST['passwd'];
+    if (isset($_POST['password'])) {
+        $passwd = $_POST['password'];
 
-        if ($passwd['passwd'] == '' || $passwd['confirm'] == '') {
-            $error['password'] = trans('Empty passwords are not allowed!').'<BR>';
-        }
-
-        if ($passwd['passwd'] != $passwd['confirm']) {
-            $error['password'] = trans('Passwords does not match!');
-        }
-
-        if (!check_password_strength($passwd['passwd'])) {
-            $error['password'] = trans('The password should contain at least one capital letter, one lower case letter, one digit and should consist of at least 8 characters!');
-        }
-        
-        if ($LMS->PasswdExistsInHistory($id, $passwd['passwd'])) {
-            $error['password'] = trans('You already used this password!');
+        if ($id == Auth::GetCurrentUser() && !$LMS->checkPassword($passwd['currentpasswd'])) {
+            $error['currentpasswd'] = trans('Wrong current password!');
+        } elseif ($passwd['passwd'] == '' || $passwd['confirm'] == '') {
+            $error['passwd'] = trans('Empty passwords are not allowed!').'<BR>';
+        } elseif ($passwd['passwd'] != $passwd['confirm']) {
+            $error['passwd'] = trans('Passwords does not match!');
+        } elseif (!check_password_strength($passwd['passwd'])) {
+            $error['passwd'] = trans('The password should contain at least one capital letter, one lower case letter, one digit and should consist of at least 8 characters!');
+        } elseif ($LMS->PasswdExistsInHistory($id, $passwd['passwd'])) {
+            $error['passwd'] = trans('You already used this password!');
         }
 
         if (!$error) {
@@ -58,6 +54,9 @@ if ($LMS->UserExists($id)) {
 
     $SMARTY->assign('error', $error);
     $SMARTY->assign('passwd', $passwd);
+    if ($id == Auth::GetCurrentUser()) {
+        $SMARTY->assign('current_password_required', true);
+    }
     $SMARTY->display('user/userpasswd.html');
 } else {
     $SESSION->redirect('?m='. $SESSION->get('lastmodule'));
